<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchemesActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Women Empowerment
        Schemes"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="28sp"
        android:textColor="@color/main03"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
           android:layout_margin="20dp"
            android:padding="10dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<TextView
    android:id="@+id/link_bbbp"
    android:layout_width="match_parent"
    android:textAlignment="center"
    android:layout_height="wrap_content"
    android:background="@drawable/sharp_rect001"
    android:textAllCaps="true"
    android:padding="20dp"
    android:linksClickable="true"
    android:textColorLink="@color/main03"
    android:text="@string/bbbp_scheme"
    android:textSize="16sp"
    />
    <TextView
        android:id="@+id/link_oscs"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/sharp_rect001"
        android:padding="20dp"
        android:textColorLink="@color/main03"
android:textAllCaps="true"
        android:text="@string/oscs_scheme"
        android:textSize="18sp"
        />
            <TextView
                android:id="@+id/link_whs"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:textAllCaps="true"
                android:text="@string/whs_scheme"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/link_ujjwala"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:textAllCaps="true"
                android:text="@string/ujjwala_scheme"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/link_wwh"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:textAllCaps="true"
                android:text="@string/wwh_scheme"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/link_swadhar"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:textAllCaps="true"
                android:text="@string/swadhar_greh"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/link_mpv"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:textAllCaps="true"
                android:text="@string/mahila_police_volunteers"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/link_msk"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sharp_rect001"
                android:padding="20dp"
                android:textColorLink="@color/main03"
                android:layout_marginBottom="20dp"
                android:textAllCaps="true"
                android:text="@string/mahila_shakti_kendra"
                android:textSize="18sp"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>